--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "moment": "^2.29.1",
+    "multer": "^1.4.3",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "nocache": "^2.1.0",
