--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postinstall": "ts-node ./scripts/postinstall.ts",
     "route:create": "ts-node ./scripts/route.create.ts",
     "db:clean": "ts-node ./scripts/db.clean.ts",
-    "default:user": "ts-node ./scripts/default.user.ts"
+    "default:user": "ts-node ./scripts/default.user.ts",
+    "fill:semesters": "ts-node ./scripts/fill.semesters.ts"
   },
   "author": "",
   "license": "ISC",
